LambdaPy/TestParser.py
# Generated from Test.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TestParser ( Parser ):

    grammarFileName = "Test.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "'='", 
                     "','", "'int8'", "'int16'", "'int32'", "'int64'", "'float'", 
                     "'!'", "'~'", "'^'", "'*'", "'/'", "'%'", "'&'", "'+'", 
                     "'-'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "FLOAT", "WS" ]

    RULE_s = 0
    RULE_codeblock = 1
    RULE_def_var = 2
    RULE_def_func = 3
    RULE_func_param = 4
    RULE_type_ = 5
    RULE_id_ = 6
    RULE_op_uni_1 = 7
    RULE_op_bin_1 = 8
    RULE_op_bin_2 = 9
    RULE_num = 10
    RULE_int_ = 11
    RULE_float_ = 12

    ruleNames =  [ "s", "codeblock", "def_var", "def_func", "func_param", 
                   "type_", "id_", "op_uni_1", "op_bin_1", "op_bin_2", "num", 
                   "int_", "float_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    ID=23
    INT=24
    FLOAT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TestParser.EOF, 0)

        def codeblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.CodeblockContext)
            else:
                return self.getTypedRuleContext(TestParser.CodeblockContext,i)


        def getRuleIndex(self):
            return TestParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = TestParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TestParser.T__0) | (1 << TestParser.T__2) | (1 << TestParser.T__7) | (1 << TestParser.T__8) | (1 << TestParser.T__9) | (1 << TestParser.T__10) | (1 << TestParser.T__11) | (1 << TestParser.T__12) | (1 << TestParser.T__13) | (1 << TestParser.ID) | (1 << TestParser.INT) | (1 << TestParser.FLOAT))) != 0):
                self.state = 26
                self.codeblock(0)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(TestParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TestParser.RULE_codeblock

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Variable_definitionContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def def_var(self):
            return self.getTypedRuleContext(TestParser.Def_varContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_definition" ):
                listener.enterVariable_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_definition" ):
                listener.exitVariable_definition(self)


    class NumberContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def num(self):
            return self.getTypedRuleContext(TestParser.NumContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)


    class Function_callContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def codeblock(self):
            return self.getTypedRuleContext(TestParser.CodeblockContext,0)

        def func_param(self):
            return self.getTypedRuleContext(TestParser.Func_paramContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)


    class SkipContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def codeblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.CodeblockContext)
            else:
                return self.getTypedRuleContext(TestParser.CodeblockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip" ):
                listener.enterSkip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip" ):
                listener.exitSkip(self)


    class IdContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(TestParser.Id_Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)


    class Unary_operationContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def op_uni_1(self):
            return self.getTypedRuleContext(TestParser.Op_uni_1Context,0)

        def codeblock(self):
            return self.getTypedRuleContext(TestParser.CodeblockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_operation" ):
                listener.enterUnary_operation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_operation" ):
                listener.exitUnary_operation(self)


    class Binary_operationContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def codeblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.CodeblockContext)
            else:
                return self.getTypedRuleContext(TestParser.CodeblockContext,i)

        def op_bin_1(self):
            return self.getTypedRuleContext(TestParser.Op_bin_1Context,0)

        def op_bin_2(self):
            return self.getTypedRuleContext(TestParser.Op_bin_2Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_operation" ):
                listener.enterBinary_operation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_operation" ):
                listener.exitBinary_operation(self)


    class Function_definitionContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def def_func(self):
            return self.getTypedRuleContext(TestParser.Def_funcContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)


    class AssignContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TestParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def codeblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.CodeblockContext)
            else:
                return self.getTypedRuleContext(TestParser.CodeblockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)



    def codeblock(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TestParser.CodeblockContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_codeblock, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = TestParser.Variable_definitionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 35
                self.def_var()
                pass

            elif la_ == 2:
                localctx = TestParser.Function_definitionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 36
                self.def_func()
                pass

            elif la_ == 3:
                localctx = TestParser.NumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 37
                self.num()
                pass

            elif la_ == 4:
                localctx = TestParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 38
                self.id_()
                pass

            elif la_ == 5:
                localctx = TestParser.Unary_operationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 39
                self.op_uni_1()
                self.state = 40
                self.codeblock(7)
                pass

            elif la_ == 6:
                localctx = TestParser.SkipContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 42
                self.match(TestParser.T__0)
                self.state = 43
                self.codeblock(0)
                self.state = 44
                self.match(TestParser.T__1)
                pass

            elif la_ == 7:
                localctx = TestParser.SkipContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 46
                self.match(TestParser.T__2)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TestParser.T__0) | (1 << TestParser.T__2) | (1 << TestParser.T__7) | (1 << TestParser.T__8) | (1 << TestParser.T__9) | (1 << TestParser.T__10) | (1 << TestParser.T__11) | (1 << TestParser.T__12) | (1 << TestParser.T__13) | (1 << TestParser.ID) | (1 << TestParser.INT) | (1 << TestParser.FLOAT))) != 0):
                    self.state = 47
                    self.codeblock(0)
                    self.state = 52
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 53
                self.match(TestParser.T__3)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 74
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = TestParser.Binary_operationContext(self, TestParser.CodeblockContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_codeblock)
                        self.state = 56
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 57
                        self.op_bin_1()
                        self.state = 58
                        self.codeblock(7)
                        pass

                    elif la_ == 2:
                        localctx = TestParser.Binary_operationContext(self, TestParser.CodeblockContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_codeblock)
                        self.state = 60
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 61
                        self.op_bin_2()
                        self.state = 62
                        self.codeblock(6)
                        pass

                    elif la_ == 3:
                        localctx = TestParser.AssignContext(self, TestParser.CodeblockContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_codeblock)
                        self.state = 64
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 65
                        self.match(TestParser.T__5)
                        self.state = 66
                        self.codeblock(2)
                        pass

                    elif la_ == 4:
                        localctx = TestParser.Function_callContext(self, TestParser.CodeblockContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_codeblock)
                        self.state = 67
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 68
                        self.match(TestParser.T__0)
                        self.state = 69
                        self.func_param()
                        self.state = 70
                        self.match(TestParser.T__1)
                        pass

                    elif la_ == 5:
                        localctx = TestParser.SkipContext(self, TestParser.CodeblockContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_codeblock)
                        self.state = 72
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 73
                        self.match(TestParser.T__4)
                        pass

             
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Def_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TestParser.Type_Context,0)


        def id_(self):
            return self.getTypedRuleContext(TestParser.Id_Context,0)


        def getRuleIndex(self):
            return TestParser.RULE_def_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef_var" ):
                listener.enterDef_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef_var" ):
                listener.exitDef_var(self)




    def def_var(self):

        localctx = TestParser.Def_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_def_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.type_()
            self.state = 80
            self.id_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Def_funcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TestParser.Type_Context,0)


        def func_param(self):
            return self.getTypedRuleContext(TestParser.Func_paramContext,0)


        def codeblock(self):
            return self.getTypedRuleContext(TestParser.CodeblockContext,0)


        def getRuleIndex(self):
            return TestParser.RULE_def_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef_func" ):
                listener.enterDef_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef_func" ):
                listener.exitDef_func(self)




    def def_func(self):

        localctx = TestParser.Def_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_def_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.type_()
            self.state = 83
            self.match(TestParser.T__0)
            self.state = 84
            self.func_param()
            self.state = 85
            self.match(TestParser.T__1)
            self.state = 86
            self.codeblock(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_paramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.Id_Context)
            else:
                return self.getTypedRuleContext(TestParser.Id_Context,i)


        def getRuleIndex(self):
            return TestParser.RULE_func_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_param" ):
                listener.enterFunc_param(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_param" ):
                listener.exitFunc_param(self)




    def func_param(self):

        localctx = TestParser.Func_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_param)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TestParser.ID:
                    self.state = 89
                    self.id_()
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==TestParser.T__6:
                        self.state = 90
                        self.match(TestParser.T__6)
                        self.state = 91
                        self.id_()
                        self.state = 96
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TestParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)




    def type_(self):

        localctx = TestParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TestParser.T__7) | (1 << TestParser.T__8) | (1 << TestParser.T__9) | (1 << TestParser.T__10) | (1 << TestParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TestParser.ID, 0)

        def getRuleIndex(self):
            return TestParser.RULE_id_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_" ):
                listener.enterId_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_" ):
                listener.exitId_(self)




    def id_(self):

        localctx = TestParser.Id_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(TestParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_uni_1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TestParser.RULE_op_uni_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_uni_1" ):
                listener.enterOp_uni_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_uni_1" ):
                listener.exitOp_uni_1(self)




    def op_uni_1(self):

        localctx = TestParser.Op_uni_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_op_uni_1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not(_la==TestParser.T__12 or _la==TestParser.T__13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_bin_1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TestParser.RULE_op_bin_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_bin_1" ):
                listener.enterOp_bin_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_bin_1" ):
                listener.exitOp_bin_1(self)




    def op_bin_1(self):

        localctx = TestParser.Op_bin_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_op_bin_1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TestParser.T__14) | (1 << TestParser.T__15) | (1 << TestParser.T__16) | (1 << TestParser.T__17) | (1 << TestParser.T__18))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_bin_2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TestParser.RULE_op_bin_2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_bin_2" ):
                listener.enterOp_bin_2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_bin_2" ):
                listener.exitOp_bin_2(self)




    def op_bin_2(self):

        localctx = TestParser.Op_bin_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_op_bin_2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TestParser.T__19) | (1 << TestParser.T__20) | (1 << TestParser.T__21))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def int_(self):
            return self.getTypedRuleContext(TestParser.Int_Context,0)


        def float_(self):
            return self.getTypedRuleContext(TestParser.Float_Context,0)


        def getRuleIndex(self):
            return TestParser.RULE_num

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNum" ):
                listener.enterNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNum" ):
                listener.exitNum(self)




    def num(self):

        localctx = TestParser.NumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_num)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TestParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.int_()
                pass
            elif token in [TestParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.float_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TestParser.INT, 0)

        def getRuleIndex(self):
            return TestParser.RULE_int_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_" ):
                listener.enterInt_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_" ):
                listener.exitInt_(self)




    def int_(self):

        localctx = TestParser.Int_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_int_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(TestParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Float_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(TestParser.FLOAT, 0)

        def getRuleIndex(self):
            return TestParser.RULE_float_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat_" ):
                listener.enterFloat_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat_" ):
                listener.exitFloat_(self)




    def float_(self):

        localctx = TestParser.Float_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_float_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(TestParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.codeblock_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def codeblock_sempred(self, localctx:CodeblockContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 1)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 2)
         




